--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "santigarcor/laratrust": "^8.0",
-        "yajra/laravel-datatables": "9.0"
+        "yajra/laravel-datatables": "10.0",
+        "yajra/laravel-datatables-oracle": "^10.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
